--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">Prime Factor</a>
 			</div>
@@ -27,7 +28,7 @@
 					<li><a onclick="$('header').animatescroll({padding:71});">Home</a></li>
 					<li><a onclick="$('.features').animatescroll({padding:71});">Services</a></li>
 					<li><a onclick="$('.social').animatescroll({padding:71});">Social</a></li>
-					<li><a onclick="$('contact').animatescroll({padding:71});">Contact Us</a></li>
+					<li><a onclick="$('contactus').animatescroll({padding:71});">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
