Added three sections
Added three sections:
What our Developers do at PFS
What our QA do at PFS plus a workflow
Why PFS should be a partner.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,51 @@
 			</div>
 		</div>
 		</section>
+		<section class="whatdev">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>We provide quality and cost effective custom web development services using latest technologies - ASP.Net, PHP, C#, Java, Drupal. Our web development services are tailored to meet client requirements and business objectives of customers. 
+Prime factor Solutions web development services helps organizations to reduce time to market, get closer to customers and achieve the common goals. We provide solutions like :
+Internet strategy development
+Web enablement of legacy applications
+Web site design and development
+Portal solutions</b>
+We have experience in .NET Development Technologies like ASP.net and C#. With our early adaption and experience, Prime factor Solutions is an ideal partner to develop web applications as well as desktop applications using .NET Technologies.
+Our developers remains updated with latest products and technologies available from Microsoft. Our expert ASP.net development team uses technologies like C#, XML, WinForms, web services and SQL Server database to create applications that are as per your requirements.</h1>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="whatqa">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Companies are looking for help to provide a product with high quality to their customers.  Prime Factor Solutions proceses focus in help our client to deliver their projects with quality and on time, our team members  follows the  Agile process.  Keeping the communication with our clients is important for us as same as providing QA results documentation to help them to make the right decisions before the delivery of their projects .  To detail the way that our company works, please see below the work flow:</h1>
+						<div class="app-screenshot">
+							<img src="img/pfsprocess.png" class="img-pfsprocess" alt="PfsProcess">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="whatpfs">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>IT Experience
+Intellectual Property Rights protection
+Approach to build long term relationship
+Global exposure and diverse expertise
+Onshore-offshore model
+Expertise on diverse technologies & domains</h1>
+						<div class="app-screenshot">
+							<img src="img/pfsprocess.png" class="img-pfsprocess" alt="PfsProcess">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="get-it">
 		<div class="container">
 			<div class="row">
